--- a/lesson1/Lesson1/Lesson1/Base.lproj/Main.storyboard
+++ b/lesson1/Lesson1/Lesson1/Base.lproj/Main.storyboard
@@ -260,14 +260,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableCellGroupMy" id="Qts-xp-1sG" customClass="TableCellGroup" customModule="Lesson1" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableVCellMyGroup" id="Qts-xp-1sG" customClass="TableVCellMyGroup" customModule="Lesson1" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qts-xp-1sG" id="XSu-bc-hhd">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6I-IS-dnQ">
+                                            <rect key="frame" x="28" y="11" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4ZD-8G-yuA">
+                                            <rect key="frame" x="364" y="7" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="S0r-Xk-h4z"/>
+                                                <constraint firstAttribute="width" constant="30" id="a1S-jV-PBr"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="4ZD-8G-yuA" firstAttribute="centerY" secondItem="XSu-bc-hhd" secondAttribute="centerY" id="8iu-kC-b31"/>
+                                        <constraint firstAttribute="trailing" secondItem="4ZD-8G-yuA" secondAttribute="trailing" constant="20" id="WCL-KX-4ZX"/>
+                                        <constraint firstItem="j6I-IS-dnQ" firstAttribute="leading" secondItem="XSu-bc-hhd" secondAttribute="leading" constant="10" id="bTR-eJ-TgK"/>
+                                        <constraint firstItem="j6I-IS-dnQ" firstAttribute="centerY" secondItem="XSu-bc-hhd" secondAttribute="centerY" id="fs3-41-uUA"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <connections>
+                                    <outlet property="MyGropuPhoto" destination="4ZD-8G-yuA" id="sOK-aP-QVS"/>
+                                    <outlet property="myGroopName" destination="j6I-IS-dnQ" id="wRh-80-TQw"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
